--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
 <properties>
   <sonar.organization>miguelangel90</sonar.organization>
   <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
+  <skipTests>true</skipTests>
 </properties>
